# COMPASStudioOnline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  index.html  kernel_utils.py  pyproject.toml  requirements.txt  server.py  start_viewer.sh
backend/: decorator.py  server.py  test.py
backend/projects/: main.py
backend/projects/examples/: boxes.py  spheres.py
frontend/: app.js  index.html
learning/: learning_app.js  learning_index.html  learning_server.py
learning/first_try_monaco/: app.js  index.html  requirements.txt  server.py  update_check.py
learning/jupyter_server/: JUPYTER_MIGRATION.md  app.js  explorer.js  index.html  livetoggle.js  requirements.txt  server.py  viewport.js
learning/simple_test_improved/: .globals.pkl  app.js  index.html  kernel_utils.py  server.py  viewport.js
src/compas_studio_online/: __init__.py  _app_backup.js  _editor_backup.html  _editor_backup.js  _index_backup.html  app.js  editor.html  editor.js  index.html  server.py
src/compas_studio_online/projects/21902/: .workspace.json  brickwall.py  project.json  read_me.py  test.py
src/compas_studio_online/projects/77894/: .workspace.json  imports.py  project.json  read_me.py  sdfkjsdf.py
src/compas_web_viewport/: __init__.py  app.js  kernel_utils.py  server.py  viewport.js
src/compas_web_viewport.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
