[project]
name = "compas-web-viewport"
version = "0.1.0"
description = "A web-based viewport application for COMPAS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "compas==2.15.0",
    "flask==3.1.2",
    "flask-cors==6.0.2",
    "ipykernel==7.1.0",
    "jupyter==1.1.1",
    "jupyter-client==8.8.0",
]

[project.scripts]
compas-viewport = "compas_web_viewport:start_server"

